body overflow issue resolved.

--- a/assets/css/markdown-theme4.css
+++ b/assets/css/markdown-theme4.css
@@ -1,6 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
+body{
+  /* overflow-x: hidden; */
+}
 
 ::-webkit-scrollbar-thumb {
   background: rgb(var(--v-theme-primary)) !important;
@@ -123,6 +125,9 @@ td {
 }
 
 @media (max-width: 768px) {
+  body{
+  overflow-x: hidden;
+}
   .markdown-content th,
   .markdown-content td {
     padding: 0.75rem 0.5rem;
